k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels:
    name: development
---
apiVersion: v1
kind: Namespace
metadata:
  name: combined-pod
  labels:
    name: combined-pod
