k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
    namespace: development
    name: postgresql
    labels:
        name: postgres
spec:
    containers:
    - name: postgres
      image: wow_postgres
      imagePullPolicy: Never
      ports:
      - containerPort: 5432
      volumeMounts:
      - name: postgres-persistent-storage
        mountPath: /var/lib/postgresql/data
    volumes:
    - name: postgres-persistent-storage
      persistentVolumeClaim:
          claimName: postgresql-claim
