k8s/postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-deploy
  namespace: development
  labels:
    app: postgresql-deploy
    restartPolicy: Always
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql-deploy
  template:
    metadata:
      labels:
        app: postgresql-deploy
    spec:
      containers:
        - name: postgresql-deploy
          image: wow_postgres
          imagePullPolicy: Never
          ports:
          - containerPort: 5432
          volumeMounts:
          - name: postgres-persistent-storage
            mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-persistent-storage
        persistentVolumeClaim:
          claimName: postgresql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-dynamic-service
  namespace: development
spec:
  type: NodePort
  selector:
    app: postgresql-deploy
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30432
