k8s/postoffice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfix-deploy
  namespace: development
  labels:
    app: postfixql-deploy
    restartPolicy: Always
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postfixql-deploy
  template:
    metadata:
      labels:
        app: postfixql-deploy
    spec:
      containers:
        - name: postfixql-deploy
          image: wow_postoffice
          imagePullPolicy: Never
          ports:
          - containerPort: 143
          - containerPort: 993
          - containerPort: 25
          - containerPort: 587
---
apiVersion: v1
kind: Service
metadata:
  name: postfixql-dynamic-service
  namespace: development
spec:
  selector:
    app: postfixql-deploy
  ports:
    - protocol: TCP
      port: 143
      targetPort: 143
    - protocol: TCP
      port: 993
      targetPort: 993
    - protocol: TCP
      port: 25
      targetPort: 25
    - protocol: TCP
      port: 587
      targetPort: 587
