k8s/redis.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
  namespace: development
  labels:
    app: redis-deploy
    restartPolicy: Never
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-deploy
  template:
    metadata:
      labels:
        app: redis-deploy
    spec:
      containers:
        - name: redis-deploy
          image: redis
          ports:
          - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
    namespace: development
    name: redis-deploy-service
spec:
    selector:
        app: redis-deploy
    ports:
        - protocol: TCP
          port: 6379
          targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deploy
  namespace: development
  labels:
    app: rabbitmq-deploy
    restartPolicy: Never
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-deploy
  template:
    metadata:
      labels:
        app: rabbitmq-deploy
    spec:
      containers:
        - name: rabbitmq-deploy
          image: rabbitmq
          ports:
          - containerPort: 5672

---
apiVersion: v1
kind: Service
metadata:
    namespace: development
    name: rabbitmq-deploy-service
spec:
    selector:
        app: rabbitmq-deploy
    ports:
        - protocol: TCP
          port: 5672
          targetPort: 5672
