k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    namespace: development
    name: gahd-io-ingress
spec:
    rules:
        - host: www.gahd.io
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: website-dynamic-deploy-service
                            port:
                                number: 8000
                  - path: /static
                    pathType: Prefix
                    backend:
                        service:
                            name: website-static-deploy-service
                            port:
                                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    namespace: kubernetes-dashboard
    name: dashboard-ingress
spec:
    rules:
        - host: dashboard.gahd.io
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: kubernetes-dashboard
                            port:
                                number: 80
